--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon --inspect index.js"
   }
 }
